--- a/WeatherSound/WeatherSound/Info.plist
+++ b/WeatherSound/WeatherSound/Info.plist
@@ -58,7 +58,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>DY</string>
+	<string>LoginAndSignup</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
