뮤직플레이어 러프드래프트

--- a/WeatherSound/WeatherSound/Info.plist
+++ b/WeatherSound/WeatherSound/Info.plist
@@ -53,6 +53,7 @@
 	<string>using</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>location</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
